# CutePad

./: .gitignore  CMakeLists.txt  README.md  index.html  main.cpp  params.json
header/: actions.h  main_menu.h  main_win.h
source/: actions.cpp  main_menu.cpp  main_win.cpp
